plugins {
    id 'java'
}

group = 'org.example'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {

    compileOnly 'org.jetbrains:annotations:23.0.0'
    implementation 'org.graalvm.js:js:23.0.1'
    implementation 'org.graalvm.js:js-scriptengine:23.0.1'
    testImplementation platform('org.junit:junit-bom:5.9.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

compileJava{
    options.compilerArgs += ["--enable-preview"]
}
compileTestJava {
    options.compilerArgs += ["--enable-preview"]
}
test {
    jvmArgs '--enable-preview'
    useJUnitPlatform()
}
